[gd_scene load_steps=2 format=3 uid="uid://daxfl371hu3tj"]

[ext_resource type="Script" path="res://Scenes/Menus/Main Menu.gd" id="1_pd3c6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pd3c6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.5
offset_top = -122.0
offset_right = 167.5
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "VampiriSystem Logo"
text = "VampiriSystem"
fit_content = true
autowrap_mode = 0

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start Game Button"
text = "Start"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Settings Menu Button"
text = "Settings"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "View Credits Button"
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Quit Game Button"
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
